--- a/docs/locales/de/LC_MESSAGES/index.po
+++ b/docs/locales/de/LC_MESSAGES/index.po
@@ -3,19 +3,20 @@
 # This file is distributed under the same license as the OpenREM package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenREM 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-09-04 12:05+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2020-09-04 13:45+0100\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: de\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: ../../index.rst:3 312dd7f3bb5747119f967e5907822e42
 msgid "Welcome to OpenREM's documentation!"
@@ -24,16 +25,20 @@ msgstr ""
 #: ../../index.rst:11 a89e1d5984ee40e387e8dcd8dc712c4a
 msgid ""
 "OpenREM is a free, open source application for patient radiation dose "
-"monitoring. The software is capable of importing and displaying data from"
-" a wide variety of x-ray dose related sources with filtering, charts and "
-"analysis. The software also enables easy export of the data in a form "
-"that is suitable for further analysis by suitably qualified medical "
+"monitoring. The software is capable of importing and displaying data "
+"from a wide variety of x-ray dose related sources with filtering, charts "
+"and analysis. The software also enables easy export of the data in a "
+"form that is suitable for further analysis by suitably qualified medical "
 "physics personnel."
 msgstr ""
 
 #: ../../index.rst:16 3b0d1987b50f4f579988d45bbe7d9126
 msgid "Please see `openrem.org <http://openrem.org>`_ for more details."
 msgstr ""
+"Please see `openrem.org <http://openrem.org>`_ for more details.\n"
+"\n"
+"Die deutsche Übersetzung der Dokumente befindet sich in der "
+"Anfangsphase, wird jedoch hier angezeigt, wenn sie erstellt werden."
 
 #: ../../index.rst:19 b8704d5237c14d42a5c8e3679f4155d5
 msgid "Contents:"
@@ -54,4 +59,3 @@ msgstr ""
 #: ../../index.rst:43 2f64ac97a7a740d89d342ec2144875d2
 msgid ":ref:`search`"
 msgstr ""
-
