--- a/docs/locales/de/LC_MESSAGES/index.po
+++ b/docs/locales/de/LC_MESSAGES/index.po
@@ -31,12 +31,17 @@ msgid ""
 "form that is suitable for further analysis by suitably qualified medical "
 "physics personnel."
 msgstr ""
-
+"OpenREM is a free, open source application for patient radiation dose "
+"monitoring. The software is capable of importing and displaying data "
+"from a wide variety of x-ray dose related sources with filtering, charts "
+"and analysis. The software also enables easy export of the data in a "
+"form that is suitable for further analysis by suitably qualified medical "
+"physics personnel. "
+"Please see `openrem.org <http://openrem.org>`_ for more details."
 #: ../../index.rst:16 3b0d1987b50f4f579988d45bbe7d9126
-msgid "Please see `openrem.org <http://openrem.org>`_ for more details."
+msgid ""
+"Please see `openrem.org <http://openrem.org>`_ for more details."
 msgstr ""
-"Please see `openrem.org <http://openrem.org>`_ for more details.\n"
-"\n"
 "Die deutsche Übersetzung der Dokumente befindet sich in der "
 "Anfangsphase, wird jedoch hier angezeigt, wenn sie erstellt werden."
 
