--- a/openrem/locale/de/LC_MESSAGES/django.po
+++ b/openrem/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-26 21:57+0100\n"
+"POT-Creation-Date: 2020-09-26 22:08+0100\n"
 "PO-Revision-Date: 2020-09-04 11:05+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -51,10 +51,13 @@ msgid "Number in last %(day_delta)s days"
 msgstr "Nummer in den letzten %(day_delta)s-Tagen"
 
 #: remapp/templates/remapp/home.html:64
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "There are %(total_studies)s studies in this database. Page last refreshed "
+#| "on %(current_time)s"
 msgid ""
 "There are %(total_studies)s studies in this database. Page last refreshed on "
-"%(current_time)s"
+"%(current_time)s."
 msgstr ""
 "In dieser Datenbank sind %(total_studies)s-Studien vorhanden. Die Seite "
 "wurde zuletzt auf %(current_time)s aktualisiert."
