Didn't work. Now renamed folder to 'no' as a final check. Refs #855 [skip ci] docs only

--- a/openrem/locale/nb_NO/LC_MESSAGES/django.po
+++ b/openrem/locale/nb_NO/LC_MESSAGES/django.po
@@ -11,8 +11,8 @@ msgstr ""
 "PO-Revision-Date: 2020-09-27 14:30+0000\n"
 "Last-Translator: Ed McDonagh <ed@mcdonagh.org.uk>\n"
 "Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/openrem/"
-"web-interface/nb_NO/>\n"
-"Language: nb_NO\n"
+"web-interface/no/>\n"
+"Language: no\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
