--- a/docs/locales/no/LC_MESSAGES/index.po
+++ b/docs/locales/no/LC_MESSAGES/index.po
@@ -11,8 +11,8 @@ msgstr ""
 "PO-Revision-Date: 2020-09-27 14:30+0000\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>\n"
 "Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/openrem/"
-"rtd-index/nb_NO/>\n"
-"Language: nb_NO\n"
+"rtd-index/no/>\n"
+"Language: no\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
