Forgot to rebuild the pot and po files without the exclamation mark. Refs #855 [skip ci] docs only

--- a/docs/locales/nb_NO/LC_MESSAGES/index.po
+++ b/docs/locales/nb_NO/LC_MESSAGES/index.po
@@ -7,30 +7,30 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenREM 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-01 22:22+0100\n"
+"POT-Creation-Date: 2020-10-01 22:50+0100\n"
 "PO-Revision-Date: 2020-10-01 22:40+0100\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>\n"
 "Language: nb_NO\n"
-"Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/"
-"openrem/rtd-index/nb_NO/>\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Language-Team: Norwegian Bokmål "
+"<https://hosted.weblate.org/projects/openrem/rtd-index/nb_NO/>\n"
+"Plural-Forms: nplurals=2; plural=n != 1\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
-"X-Generator: Poedit 2.4.1\n"
 
 #: ../../index.rst:3
-msgid "Welcome to OpenREM's documentation!"
+#, fuzzy
+msgid "Welcome to OpenREM's documentation"
 msgstr "Velkommen til OpenREM-dokumentasjonen"
 
 #: ../../index.rst:11
 msgid ""
 "OpenREM is a free, open source application for patient radiation dose "
-"monitoring. The software is capable of importing and displaying data "
-"from a wide variety of x-ray dose related sources with filtering, charts "
-"and analysis. The software also enables easy export of the data in a "
-"form that is suitable for further analysis by suitably qualified medical "
+"monitoring. The software is capable of importing and displaying data from"
+" a wide variety of x-ray dose related sources with filtering, charts and "
+"analysis. The software also enables easy export of the data in a form "
+"that is suitable for further analysis by suitably qualified medical "
 "physics personnel."
 msgstr ""
 "OpenREM er et gratis og fritt program for overvåking av "
@@ -48,26 +48,27 @@ msgid ""
 "These docs are for the version of OpenREM currently in development. For "
 "the current release version, see https://docs.openrem.org/"
 msgstr ""
-"Denne dokumentasjonen er for versjonen av OpenREM som er i utvikling. "
-"For nåværende utgitt versjon, henvend deg til https://docs.openrem.org/"
+"Denne dokumentasjonen er for versjonen av OpenREM som er i utvikling. For"
+" nåværende utgitt versjon, henvend deg til https://docs.openrem.org/"
 
 #: ../../index.rst:21
 msgid ""
 "These docs are in British English - if you want to help translate them "
-"into other languages please get in touch: `@_OpenREM <https://twitter."
-"com/_OpenREM>`_, `Bitbucket <https://bitbucket.org/openrem/openrem/"
-"issues/855/add-other-languages-as-people-volunteer>`_, `Google Groups "
-"<mailto:openrem@googlegroups.com>`_ or head over to `Weblate <https://"
-"hosted.weblate.org/projects/openrem/>`_ to get started. More details: :"
-"doc:`translations`."
+"into other languages please get in touch: `@_OpenREM "
+"<https://twitter.com/_OpenREM>`_, `Bitbucket "
+"<https://bitbucket.org/openrem/openrem/issues/855/add-other-languages-as-"
+"people-volunteer>`_, `Google Groups <mailto:openrem@googlegroups.com>`_ "
+"or head over to `Weblate <https://hosted.weblate.org/projects/openrem/>`_"
+" to get started. More details: :doc:`translations`."
 msgstr ""
 "Dokumentasjonen er innledningsvis kun på britisk engelsk - hvis du vil "
 "bistå oversettelsen til andre språk kan du ta kontakt: `@_OpenREM "
-"<https://twitter.com/_OpenREM>`_, `Bitbucket <https://bitbucket.org/"
-"openrem/openrem/issues/855/add-other-languages-as-people-volunteer>`_, "
-"`Google-gruppe <mailto:openrem@googlegroups.com>`_ eller gå over til "
-"`Weblate <https://hosted.weblate.org/projects/openrem/>`_ for å komme i "
-"gang. More details: :doc:`translations`."
+"<https://twitter.com/_OpenREM>`_, `Bitbucket "
+"<https://bitbucket.org/openrem/openrem/issues/855/add-other-languages-as-"
+"people-volunteer>`_, `Google-gruppe <mailto:openrem@googlegroups.com>`_ "
+"eller gå over til `Weblate "
+"<https://hosted.weblate.org/projects/openrem/>`_ for å komme i gang. More"
+" details: :doc:`translations`."
 
 #: ../../index.rst:27
 msgid "Contents:"
@@ -90,21 +91,26 @@ msgid ":ref:`search`"
 msgstr ":ref:`search`"
 
 #~ msgid ""
-#~ "These docs are in British English - if you want to help translate "
-#~ "them into other languages please get in touch:"
+#~ "These docs are in British English "
+#~ "- if you want to help translate"
+#~ " them into other languages please get"
+#~ " in touch:"
 #~ msgstr ""
-#~ "Dokumentasjonen er innledningsvis kun på britisk engelsk - hvis du "
-#~ "vil bistå oversettelsen til andre språk kan du ta kontakt:"
+#~ "Dokumentasjonen er innledningsvis kun på "
+#~ "britisk engelsk - hvis du vil "
+#~ "bistå oversettelsen til andre språk kan"
+#~ " du ta kontakt:"
 
 #~ msgid "`@_OpenREM <https://twitter.com/_OpenREM>`_"
 #~ msgstr "`@_OpenREM <https://twitter.com/_OpenREM>`_"
 
 #~ msgid ""
-#~ "`Bitbucket <https://bitbucket.org/openrem/openrem/issues/855/add-"
-#~ "other-languages-as-people-volunteer>`_"
+#~ "`Bitbucket <https://bitbucket.org/openrem/openrem/issues/855"
+#~ "/add-other-languages-as-people-volunteer>`_"
 #~ msgstr ""
-#~ "`Bitbucket <https://bitbucket.org/openrem/openrem/issues/855/add-"
-#~ "other-languages-as-people-volunteer>`_"
+#~ "`Bitbucket <https://bitbucket.org/openrem/openrem/issues/855"
+#~ "/add-other-languages-as-people-volunteer>`_"
 
 #~ msgid "`Google Groups <mailto:openrem@googlegroups.com>`_"
 #~ msgstr "`Google-gruppe <mailto:openrem@googlegroups.com>`_"
+
