--- a/openrem/locale/de/LC_MESSAGES/django.po
+++ b/openrem/locale/de/LC_MESSAGES/django.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-08 21:36+0100\n"
+"POT-Creation-Date: 2020-10-09 14:18+0100\n"
 "PO-Revision-Date: 2020-10-09 12:43+0000\n"
 "Last-Translator: Georg Stamm <stamm.georg@gmail.com>\n"
-"Language-Team: German <https://hosted.weblate.org/projects/openrem/"
-"web-interface/de/>\n"
+"Language-Team: German <https://hosted.weblate.org/projects/openrem/web-"
+"interface/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
