--- a/docs/locales/nb_NO/LC_MESSAGES/installation.po
+++ b/docs/locales/nb_NO/LC_MESSAGES/installation.po
@@ -7,17 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenREM 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-01 18:30+0100\n"
+"POT-Creation-Date: 2020-10-13 20:31+0100\n"
 "PO-Revision-Date: 2020-10-08 17:05+0000\n"
 "Last-Translator: Ed McDonagh <ed@mcdonagh.org.uk>\n"
-"Language-Team: Norwegian Bokmål <https://hosted.weblate.org/projects/openrem/"
-"rtd-installation/nb_NO/>\n"
 "Language: nb_NO\n"
+"Language-Team: Norwegian Bokmål "
+"<https://hosted.weblate.org/projects/openrem/rtd-installation/nb_NO/>\n"
+"Plural-Forms: nplurals=2; plural=n != 1\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.3-dev\n"
 "Generated-By: Babel 2.8.0\n"
 
 #: ../../installation.rst:3
@@ -71,7 +70,8 @@ msgid "Open a web browser and go to http://localhost/"
 msgstr "Åpne en nettleser og gå til http://localhost/"
 
 #: ../../installation.rst:46
-msgid "Non-docker alternative - Linux only"
+#, fuzzy
+msgid "Non-Docker alternative - Linux only"
 msgstr "Ikke-Docker-alternativ - Bare Linux"
 
 #: ../../installation.rst:48
@@ -107,3 +107,4 @@ msgstr ""
 #: ../../installation.rst:93
 msgid "Web servers"
 msgstr "Vev-tjenere"
+
